Closed Bug 1735266 Opened 4 years ago Closed 4 years ago

don't potentially create a document where none existed in CollectFrameTreeData

Categories

(Firefox :: Session Restore, defect)

defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox-esr91 --- fixed
firefox94 --- fixed
firefox95 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

Details

Attachments

(1 file)

See explanation at https://bugzilla.mozilla.org/show_bug.cgi?id=1725569#c18
Short version: the GetDoc call in CollectFrameTreeData creates a doc if none existed.

Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b94ac1d5d704 Call GetExtantDoc instead of GetDoc in CollectFrameTreeData so we don't potentially create a doc where non existed before. r=farre
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch

Please nominate this for Beta approval.

Flags: needinfo?(tnikkel)

Comment on attachment 9245391 [details]
Bug 1735266. Call GetExtantDoc instead of GetDoc in CollectFrameTreeData so we don't potentially create a doc where non existed before. r?farre,kashav,annyG

Beta/Release Uplift Approval Request

  • User impact if declined: needed for bug 1725569
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): small change to session store code to not create a doc accidentally when getting a doc
  • String changes made/needed: none
Flags: needinfo?(tnikkel)
Attachment #9245391 - Flags: approval-mozilla-beta?

Comment on attachment 9245391 [details]
Bug 1735266. Call GetExtantDoc instead of GetDoc in CollectFrameTreeData so we don't potentially create a doc where non existed before. r?farre,kashav,annyG

Approved for 94.0b6

Attachment #9245391 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9245391 [details]
Bug 1735266. Call GetExtantDoc instead of GetDoc in CollectFrameTreeData so we don't potentially create a doc where non existed before. r?farre,kashav,annyG

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: needed for uplift of bug 1725569
  • User impact if declined: user impact is from bug 1725569
  • Fix Landed on Version: 95
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): small change to session store code to not create a doc accidentally when getting a doc
  • String or UUID changes made by this patch: none
Attachment #9245391 - Flags: approval-mozilla-esr91?

Comment on attachment 9245391 [details]
Bug 1735266. Call GetExtantDoc instead of GetDoc in CollectFrameTreeData so we don't potentially create a doc where non existed before. r?farre,kashav,annyG

Approved for 91.3esr.

Attachment #9245391 - Flags: approval-mozilla-esr91? → approval-mozilla-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: