Bug 1735266. Call GetExtantDoc instead of GetDoc in CollectFrameTreeData so we don't potentially create a doc where non existed before. r=farre

See https://bugzilla.mozilla.org/show_bug.cgi?id=1725569#c18 for how this causes a test to fail.

Differential Revision: https://phabricator.services.mozilla.com/D128155