toolkit/components/sessionstore/SessionStoreUtils.cpp
@@ -1347,7 +1347,7 @@ static void CollectFrameTreeData(JSContext* aCx,
     return;
   }
 
-  Document* document = window->GetDoc();
+  Document* document = window->GetExtantDoc();
   if (!document) {
     return;
   }
